welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:7: error: not found: value i
	setPos(i,j)
               ^ZigZag:8: error: not found: value cpt
	ecritMessage(cpt)
                     ^ZigZag:9: error: not found: value cpt
	cpt += 1
        ^ZigZag:10: error: not found: value i
	i += 1
        ^ZigZag:11: error: not found: value i
	if (i == getMondeLargeur) {
            ^ZigZag:12: error: not found: value j
		j += 1
                ^ZigZag:13: error: not found: value i
		i = 0
                ^