welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {

def fonctionTest():Boolean = {
	(getX() == getMondeLargeur()-1 && getY() == getMondeHauteur()-1)
}

while (!fonctionTest) {
	setPos(i,j)
	ecritMessage(cpt)
	cpt += 1
	i += 1
	if (i == getMondeLargeur) {
		j += 1
		i = 0
	}
}

}
